tests/parser/invalidinput/functiondefinition.idp
// Define function only on left hand side!

vocabulary V{
	type t
	f(t):t
	q(t)
}

theory T:V{
	{
		!x: x=f(x) <- q(x).
	}
}

structure S:V{
	t = {1..3}
	q = {1;2}
}

procedure main(){
	return 1
}
